# internal/server/http_server/handler_token.go
@@ -5,23 +5,24 @@ import (
 
 	"github.com/go-chi/render"
 	"github.com/rs/zerolog/log"
+
 	"github.com/ssup2ket/ssup2ket-auth-service/internal/domain/service"
 )
 
-// Create a token
-func (s *ServerHTTP) PostTokens(w http.ResponseWriter, r *http.Request) {
+// Login
+func (s *ServerHTTP) PostTokensLogin(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
-	tokenCreate := TokenCreate{}
 
-	// Unmarshal request
-	if err := render.Bind(r, &tokenCreate); err != nil {
-		log.Ctx(ctx).Error().Err(err).Msg("Wrong ID/password format")
-		render.Render(w, r, getErrRendererBadRequest())
+	// Get login ID and password
+	loginID, password, ok := r.BasicAuth()
+	if !ok {
+		log.Ctx(ctx).Error().Msg("No ID/password info")
+		render.Render(w, r, getErrRendererUnauthorized())
 		return
 	}
 
 	// Create token
-	tokenInfo, err := s.domain.Token.CreateToken(ctx, tokenCreate.LoginId, tokenCreate.Password)
+	accTokenInfo, refTokenInfo, err := s.domain.Token.CreateTokens(ctx, loginID, password)
 	if err != nil {
 		if err == service.ErrRepoNotFound {
 			log.Ctx(ctx).Error().Err(err).Msg("ID doesn't exists")
@@ -32,18 +33,56 @@ func (s *ServerHTTP) PostTokens(w http.ResponseWriter, r *http.Request) {
 			render.Render(w, r, getErrRendererUnauthorized())
 			return
 		}
-		log.Ctx(ctx).Error().Err(err).Msg("Failed to create token")
+		log.Ctx(ctx).Error().Err(err).Msg("Failed to create access, refresh tokens")
 		render.Render(w, r, getErrRendererServerError())
 		return
 	}
 
-	render.JSON(w, r, TokenInfo{
-		Token:     tokenInfo.Token,
-		IssuedAt:  tokenInfo.IssuedAt,
-		ExpiresAt: tokenInfo.ExpiresAt})
+	render.JSON(w, r, TokenInfos{
+		AccessToken: TokenInfo{
+			Token:     accTokenInfo.Token,
+			IssuedAt:  accTokenInfo.IssuedAt,
+			ExpiresAt: accTokenInfo.ExpiresAt,
+		},
+		RefreshToken: TokenInfo{
+			Token:     refTokenInfo.Token,
+			IssuedAt:  refTokenInfo.IssuedAt,
+			ExpiresAt: refTokenInfo.ExpiresAt,
+		},
+	})
 }
 
-// Validate & Bind
-func (u *TokenCreate) Bind(r *http.Request) error {
+func (s *ServerHTTP) PostTokensRefresh(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	tokenRefresh := TokenRefresh{}
+
+	// Unmarshal request
+	if err := render.Bind(r, &tokenRefresh); err != nil {
+		log.Ctx(ctx).Error().Err(err).Msg("Wrong create user request")
+		render.Render(w, r, getErrRendererBadRequest())
+		return
+	}
+
+	// Refresh token
+	refTokenInfo, err := s.domain.Token.RefreshToken(ctx, tokenRefresh.RefreshToken)
+	if err != nil {
+		if err == service.ErrUnauthorized {
+			log.Ctx(ctx).Error().Err(err).Msg("Wrong refresh token")
+			render.Render(w, r, getErrRendererUnauthorized())
+			return
+		}
+		render.Render(w, r, getErrRendererServerError())
+		log.Ctx(ctx).Error().Err(err).Msg("Failed to refresh token")
+		return
+	}
+
+	render.JSON(w, r, TokenInfo{
+		Token:     refTokenInfo.Token,
+		IssuedAt:  refTokenInfo.IssuedAt,
+		ExpiresAt: refTokenInfo.ExpiresAt,
+	})
+}
+
+func (u *TokenRefresh) Bind(r *http.Request) error {
 	return nil
 }
